--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donaciones</title>
+    <title>Donación con PayPal</title>
   </head>
   <body>
-    <h1>hola mundo</h1>
+    <h1>Apoya nuestro proyecto</h1>
+
+    <!-- Contenedor para el botón de PayPal -->
+    <div id="paypal-button-container"></div>
+
+    <!-- SDK de PayPal -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AfxsGl3Xe8VcNzij4KMtVKdfhvdEPbIHcYjOD9RCB39dcJprpt5vYoW9X4u1sKZgj2uVHlwbHM3YNNxJ&currency=USD"></script>
+
+    <div id="paypal-button-container"></div>
+    <script>
+      paypal
+        .Buttons({
+          style: {
+            layout: "vertical",
+            color: "blue",
+            shape: "rect",
+            label: "donate",
+          },
+          createOrder: function (data, actions) {
+            return actions.order.create({
+              purchase_units: [
+                {
+                  amount: {
+                    value: "1.00", // Cambia esto al valor deseado
+                  },
+                },
+              ],
+              application_context: {
+                shipping_preference: "NO_SHIPPING", // Omite la dirección de envío
+                user_action: "PAY_NOW",
+                payment_method: {
+                  payer_selected: "PAYPAL",
+                  payee_preferred: "IMMEDIATE_PAYMENT_REQUIRED",
+                },
+              },
+            });
+          },
+          onApprove: function (data, actions) {
+            return actions.order.capture().then(function (details) {
+              alert(
+                "Gracias por su donación, " + details.payer.name.given_name
+              );
+            });
+          },
+        })
+        .render("#paypal-button-container");
+    </script>
   </body>
 </html>
